--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,7 +18,7 @@
           <% end %>
         <% end %>
 
-        <%= link_to reply_new_path(id: topic.id) do %>
+        <%= link_to replies_new_path(id: topic.id) do %>
           <%= image_tag "icons/comment.png", class: "topic-index-icon" %>
         <% end %>
 
