--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -8,8 +8,8 @@
             <%= topic.user.name%>
           </h2>
           <%= image_tag topic.image.url %>
-          
-          <%= link_to reply_new_path(id: topic.id) do %>
+
+          <%= link_to replies_new_path(id: topic.id) do %>
             <%= image_tag "icons/comment.png", class: "topic-index-icon" %>
           <% end %>
           <p class="topic-text">
