--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,16 @@
       <div class="col-md-offset-4 col-md-4 users-new-container">
         <h1 class="text-center text-white">Sign in</h1>
         <%= form_for @user do |f| %>
+
+        <% @user.errors.full_messages.each do |user| %>
+          <div class="form-error text-red">
+            <%= user %>
+          </div>
+        <% end %>
+
+
+
+
           <div class="form-group">
             <%= f.label :name, class: "text-white"%>
             <%= f.text_field :name, class: "form-control"%>
